Apply now has been updated

--- a/main-website/backend/.env
+++ b/main-website/backend/.env
@@ -3,3 +3,5 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=st_anthony_college_database
 JWT_SECRET=your_jwt_secret
+EMAIL_USER=abhishekbm8073@gmail.com
+EMAIL_PASS=ngrk hukx buec kafm
